# Evidence-Driven-LLM-Agent-for-C-to-Synthesizable-C-Conversion-and-Verification

./: README.md  pyproject.toml
configs/: demo_config.yaml
data/toy_cases/example_01/: README.md
docs/: experiment_schema.md  module_map.md  privacy_notes.md  workflow.md
docs/superpowers/plans/: 2026-06-28-hls-agent-open-demo.md
examples/: task.json
results/: demo_run_summary.json
src/demo_hls_agent/: __init__.py  cli.py  evaluator_agent.py  hls_failure_analyst.py  instrumentor_agent.py  mock_verifier.py  orchestrator.py  planner_agent.py  programmer_agent.py  reviewer_agent.py
src/hls_agent/: __init__.py  cli.py  evaluator_agent.py  hls_failure_analyst.py  mock_verifier.py  orchestrator.py  programmer_agent.py  rag_module.py  reviewer_agent.py  types.py
tests/: test_demo_pipeline.py  test_pipeline.py
