[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-driven-hls-agent"
version = "0.1.0"
description = "Minimal open-source skeleton for an evidence-driven HLS agent workflow"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
